<resources>
    <string name="app_name">কবুতর</string>
    <string name="username">Username</string>
    <string name="app_logo">App Logo</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="image">Image</string>
    <string name="add_a_caption">Add a caption</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="add_button">Add Button</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="notifications">Notifications</string>
    <string name="select_theme">Select Theme</string>
    <string name="log_out">Log Out</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="recent_chats">Recent Chats</string>
    <string name="start_new_chat">Start New Chat</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="contact_name">Contact Name</string>
    <string name="last_message">Last message</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="new_chat">New Chat</string>
    <string name="create_group_chat">Create Group Chat</string>
    <string name="contact_email">Contact Email</string>
    <string name="contact_image">Contact image</string>
    <string name="key">key</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>