<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/baseline_search_24"
        android:orderInCategory="100"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/app_bar_key"
        android:orderInCategory="100"
        android:title="@string/key"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@drawable/baseline_settings_24"
        android:orderInCategory="101"
        app:showAsAction="ifRoom" />
</menu>
