<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <!-- Name of the contact -->
    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/circle_bg"
        android:clipToOutline="true"
        android:contentDescription="@string/contact_image"
        android:src="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/textViewContactName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewContactEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:text="@string/contact_email" />
    </LinearLayout>
</LinearLayout>
